# AutoCoScientist

./: .codespell-ignorewords  .env_example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  autods_config.yaml.example  docker-compose-cognee.yml  pyproject.toml
autods/: cli.py  constants.py
autods/agents/: base.py  domain.py  think_act_agent.py
autods/agents/autods/: __init__.py  autods.py  domain.py
autods/agents/experiment_extractor/: README.md  __init__.py  domain.py  experiment_extractor.py
autods/callbacks/: printer.py  tracer.py
autods/environments/: display_utils.py  jupyter.py  kernel_management.py  output_handling.py  python_env.py  sandbox.py  utility_functions.py
autods/grad/: README.md  __init__.py  client.py  grad.py  repository.py  xmlapi.py
autods/prompting/: __init__.py  prompt_generator.py  prompt_store.py
autods/prompting/prompts/: analyst.md  autods.md  debugger.md  experiment_extractor.md  grad.md  planner.md  planner_one_shot.md  presenter.md  researcher copy.md  researcher.md  tooluse.md
autods/repository_processor/: example_extractor.py  markdown_example_extractor.py  notebook_example_extractor.py  processor.py  utils.py
autods/runtime/: runner.py
autods/sessions/: __init__.py  domain.py  service.py  storage.py
autods/task_inference/: __init__.py  autods.py  base.py
autods/tools/: README.md  base.py  decorators.py
autods/tools/v2/: _lark_codeblocks.py  codeblocks.py  ipython.py  libq.py  pdf_parser.py  quick_python.py  shell.py  submit.py  toolkit_v2.py
autods/utils/: class_injection.py  config.py  github_url.py  llm_client.py  parse_tools.py  parsers.py  repo_treesitter.py  retry_utils.py  system_resources.py  xml.py
autods/validation/: __init__.py  submission.py
autods/web/: api.py  loggers.py  previewer.py  server.py  streamlit_app.py
autods/web/app_components/: multi_file_uploader.py
bench/: README.md  cli.py  data.py  instructions-sber.txt  instructions.txt  registry.py  utils.py
bench/competitions/aeroclub-recsys-2025/: checksums.yaml  config.yaml  description.md  grade.py  leaderboard.csv  prepare.py
bench/competitions/amex-default-prediction/: amex-competition-metric.ipynb  build_dataset_stats.py  checksums.yaml  config.yaml  dataset_stats.json  description.md  grade.py  leaderboard.csv  prepare.py  test_customer_summary.parquet  train_customer_summary.parquet
bench/competitions/house-prices-advanced-regression-techniques/: checksums.yaml  config.yaml  description.md  grade.py  leaderboard.csv  prepare.py
bench/competitions/ito-5212-rec-sys/: checksums.yaml  config.yaml  description.md  grade.py  leaderboard.csv  prepare.py
bench/competitions/m5-forecasting-accuracy/: build_wrmsse_reference.py  checksums.yaml  config.yaml  description.md  grade.py  leaderboard.csv  metadata.csv  prepare.py  wrmsse_reference.parquet
bench/competitions/rossmann-store-sales/: checksums.yaml  config.yaml  description.md  grade.py  leaderboard.csv  prepare.py
bench/competitions/santander-product-recommendation/: checksums.yaml  config.yaml  description.md  grade.py  leaderboard.csv  prepare.py
bench/competitions/spaceship-titanic/: config.yaml  description.md  description_obfuscated.md  grade.py  prepare.py
bench/competitions/store-sales-time-series-forecasting/: checksums.yaml  config.yaml  description.md  grade.py  leaderboard.csv  prepare.py
bench/competitions/titanic/: checksums.yaml  config.yaml  description.md  description_obfuscated.md  grade.py  leaderboard.csv  prepare.py
bench/experiments/: make_submission.py
bench/experiments/splits/: all.txt
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: providers.tsx
frontend/src/hooks/: useAgentWebSocket.ts  useArtifacts.ts  useAutoScroll.ts  useDatasets.ts  (+1 more)
tests/: test_experiment_extractor.py
(+34 files in other folders)
