[project]
name = "autocoscientist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "langchain-core~=0.3.75",
    "langchain-google-genai~=2.1.10",
    "langchain-mcp-adapters~=0.1.9",
    "langchain-openai>=0.3.32",
    "langgraph~=0.6.6",
    "lightgbm>=4.6.0",
    "litellm>=1.81.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "PyGithub>=2.1.1",
    "gitpython>=3.1.40",
    "httpx>=0.27.2",
    "tavily-python>=0.3.4",
    "arxiv>=2.1.0",
    "streamlit>=1.50.0",
    "langchain~=0.3.27",
    "langchain-text-splitters>=0.3.5",
    "crawl4ai[pdf]>=0.7.4",
    "rapidfuzz>=3.9.6",
    "courlan>=1.3.2",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "pocketflow>=0.0.1",
    "requests>=2.28.0",
    "google-cloud-aiplatform>=1.25.0",
    "pathspec>=0.11.0",
    "chromadb>=1.1.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "grpcio<1.67.0",
    "langchain-community>=0.3.31",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "lark>=1.1.9",
    "json-repair>=0.53.0",
    "psutil>=7.1.0",
    "pygrad @ git+https://github.com/AaLexUser/pygrad.git",
    "tree-sitter>=0.23.2",
    "tree-sitter-python>=0.23.4",
    "cognee[all,neo4j,postgres]>=0.5.1",
    #"neo4j-graphrag[ollama]>=0.9.0", #TODO: Remove later, fix Error: Ollama support requires: pip install neo4j-graphrag[ollama]
    "fastapi>=0.127.0",
    "aiosqlite==0.21.0",
    "nbconvert>=7.16.6",
    "pymupdf>=1.24.0",
]

[project.scripts]
autods = "autods.cli:main"
benchmark = "benchmark.cli:main"
bench = "bench.cli:main"
anb = "analyze_notebook:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.12.0",
    "types-pyyaml>=6.0.12.20250822",
    "pre-commit>=4.2.0",
    "mypy>=1.18.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0"
]

[project.optional-dependencies]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "websockets>=11.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["autods"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
ignore_missing_imports = true
exclude = [
    "autods/tools/templates/",
    "benchmark/baselines_no_tool/",
    "benchmark/baselines_with_tool",
    "data",
    "bench/competitions/",
    "bench/results/",
    "mle-bench",
]

[[tool.mypy.overrides]]
module = [
    "langchain_core.*",
    "langchain_google_genai.*",
    "langchain_openai.*",
    "langgraph.*",
    "dotenv.*",
    "requests.*"
]
ignore_missing_imports = true

[tool.ruff]
fix = true
exclude = [
    "autods/tools/templates/",
    "bench/results/",
    "mle-bench",
    "RepoMaster",
]

[tool.ruff.lint]
select = [
    "I",
    "F401" # Unused import
]

[tool.ruff.lint.isort]
known-first-party = ["autods"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
